# TorchFuncBasis

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
examples/: test-bfunc.py  test-bspl.py  test-bsplbasisderiv.py  test-bsplderiv.py  test-bsplinebasis.py  test-fourierbasis.py  test-smoothbasis.py
tests/test_basis/: test_bspline.py
torchfuncbasis/: __init__.py  operators.py  smoother.py
torchfuncbasis/basis/: __init__.py  _basis.py  _bspline.py  bsplinebasis.py  fourierbasis.py
torchfuncbasis/misc/: _defaults.py  _helpers.py  _typing.py  _validate.py
