[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchfuncbasis"
version = "0.1.0"
description = "A PyTorch-based functional basis library for smooth function approximation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Muye Nanshan", email = "muye.nanshan@gmail.com"},
]
dependencies = [
    "torch>=2.0.0",
    "jaxtyping>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib",
    "scipy",
]

[tool.setuptools]
packages = ["torchfuncbasis"]
